# discord-soundboard-tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
